--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@geist-ui/core": "^2.3.6",
+    "@geist-ui/react": "^2.2.5",
+    "@prisma/client": "^3.10.0",
+    "inter-ui": "^3.19.3",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -18,6 +22,8 @@
     "@types/react": "17.0.40",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
+    "prisma": "^3.10.0",
+    "ts-node": "^10.7.0",
     "typescript": "4.6.2"
   }
 }
