--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@geist-ui/core": "^2.3.6",
     "@geist-ui/icons": "^1.0.1",
     "@geist-ui/react": "^2.2.5",
-    "@prisma/client": "^3.10.0",
+    "@prisma/client": "3.10.0",
     "inter-ui": "^3.19.3",
     "next": "12.1.0",
     "react": "17.0.2",
